--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension HTML::Tidy.
 
+0.01
+        [INFRASTRUCTURE]
+        * HTML::Tidy::Error is now HTML::Tidy::Message.
+
 0.00_01 Mon Feb 16 21:21:31 2004
         Very first version, wrapping the tidy lib from sourceforge.
         I don't expect that anyone will actually use this version,
