Import of PETDANCE/HTML-Tidy-1.01_01 from CPAN.
gitpan-cpan-distribution: HTML-Tidy
gitpan-cpan-version:      1.01_01
gitpan-cpan-path:         PETDANCE/HTML-Tidy-1.01_01.tar.gz
gitpan-cpan-author:       PETDANCE
gitpan-cpan-maturity:     developer

--- a/README
+++ b/README
@@ -1,18 +1,13 @@
-HTML-Tidy version 0.01
-======================
+HTML::Tidy
+==========
 
-The README is used to introduce the module and provide instructions on
-how to install the module, any machine dependencies it may have (for
-example C compilers and installed libraries) and any other information
-that should be provided before the module is installed.
-
-A README file is required for CPAN modules since CPAN extracts the
-README file from a module distribution so that people browsing the
-archive can use it get an idea of the modules uses. It is usually a
-good idea to provide version information here so that people can
-decide whether fixes for the module are worth downloading.
+HTML::Tidy is an HTML checker in a handy dandy object.  It's meant as
+a replacement for HTML::Lint.
 
 INSTALLATION
+
+You need libtidy to build HTML::Tidy. Check section INSTALLING TIDY on this
+document for more information.
 
 To install this module type the following:
 
@@ -21,20 +16,61 @@ To install this module type the following:
    make test
    make install
 
-DEPENDENCIES
+INSTALLING TIDY
 
-This module requires these other modules and libraries:
+You can get a distribution for libtidy at:
 
-  Test::More
+    http://tidy.sourceforge.net/src/tidy_src.tgz
+
+You can also check out from the CVS tree with the following two steps:
+
+Login in to the anonymous CVS server at SourceForge:
+
+    $ cvs -d:pserver:anonymous@cvs.sf.net:/cvsroot/tidy login
+    (Logging in to anonymous@cvs.sf.net)
+    CVS password: [hit ENTER]
+
+Check out the source tree:
+
+    $ cvs -d:pserver:anonymous@cvs.sf.net:/cvsroot/tidy co tidy
+    cvs server: Updating tidy
+    cvs server: Updating tidy/CVSROOT
+    U tidy/CVSROOT/checkoutlist
+    U tidy/CVSROOT/commitinfo
+    ... many many files come out ...
+
+If you're on Mac OS X, you'll need to tell the Makefile that you use
+ranlib:
+
+    $ export set RANLIB=ranlib
+
+Change to the directory with the Makefile in it, and run make.
+This example uses the GNU make Makefile.
+
+    $ cd tidy/build/gmake/
+
+    $ make
+    if [ ! -d ./obj ]; then mkdir ./obj; fi
+    gcc -o obj/access.o ...
+    ... etc etc etc ...
+
+Install the libs, headers and the tidy executable:
+
+    $ sudo make install
+
+If you're on Mac OS X, you'll have to run ranlib again on the installed
+lib:
+
+    $ sudo ranlib /usr/local/lib/libtidy.a
+
+Once these steps are complete, you'll be able to go back to HTML::Tidy
+and build it normally.
+
 
 COPYRIGHT AND LICENCE
 
-Put the correct copyright and licence information here.
-
-Copyright (C) 2004 by A. U. Thor
+Copyright (C) 2004 by Andy Lester
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself, either Perl version 5.8.1 or,
 at your option, any later version of Perl 5 you may have available.
-
-
