Import of PETDANCE/HTML-Tidy-1.02 from CPAN.
gitpan-cpan-distribution: HTML-Tidy
gitpan-cpan-version:      1.02
gitpan-cpan-path:         PETDANCE/HTML-Tidy-1.02.tar.gz
gitpan-cpan-author:       PETDANCE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,12 +1,17 @@
 Revision history for Perl extension HTML::Tidy.
 
+1.02    Wed Mar  3 22:43:57 CST 2004
+        [ENHANCEMENTS]
+        * Added clean() method for cleaning up using the Tidy magic.
+          Thanks to Ben Trott.
+
 1.01_01 Sun Feb 29 11:39:07 CST 2004
         [FIXES]
         * Message parsing is split on a Ctrl-J instead of \n now.
           This should fix the test problems on Win32.
 
         * Removed the #include "ppport.h" from Tidy.xs so it can compile
-          on Win32.
+          on Win32.  Thanks to crazyinsomniac.
 
         [MISCELLANEOUS]
         * Moved the install directions for tidylib into the README.
