--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension HTML::Tidy.
 
+1.06    Fri Aug 19 10:23:29 CDT 2005
+        NO FUNCTIONAL CHANGES.  Just a version bump and some doc fixes.
+
 1.05_02 Wed Apr 20 22:43:31 CDT 2005
         [FIXES]
         * Made clean() return undef if it has no input.  Thanks to
