--- a/Changes
+++ b/Changes
@@ -1,9 +1,23 @@
 Revision history for Perl extension HTML::Tidy.
 
-1.52    Wed May 12 23:40:09 CDT 2010
-------------------------------------
+1.54    Fri Sep 17 00:44:36 CDT 2010
+====================================
+Please note that the bug tracker for HTML::Tidy is now at
+http://github.com/petdance/html-tidy.
+
+[FIXES]
+Fixed incorrect calls to croak().  Thanks, Steve Grazzini.
+
+[DOCUMENTATION]
+Updating all docs referring to libtidyp and Alien::Libtidyp.
+
+
+1.52    Wed May 12 2010
+=======================
+First release since the major overhaul that relies on libtidyp.
+
 Now relies on Perl 5.8.  I'm not at all interested in supporting
-ancient Perl versions.
+ancient Perl version.
 
 HTML::Tidy now relies on the libtidyp that Andy Lester maintains
 on github.
@@ -19,5 +33,3 @@ Improve support for Windows platforms.
 Fixed a segfault if there are no errors.
 
 Allow for either "tidyp" or "HTML Tidy" as a program name in tests.
-
-
