--- a/Changes
+++ b/Changes
@@ -1,5 +1,22 @@
 Revision history for Perl extension HTML::Tidy.
 
+1.56    Sun Sep 22 16:39:40 CDT 2013
+====================================
+[ENHANCEMENTS]
+webtidy's version statement now shows the version number of the underlying
+tidyp library.
+
+[FIXES]
+Fixed an undef warning in parse().  Thanks, Vladimir Timofeev.
+
+utf8 was never encoded correctly.  Thanks, Vladimir Timofeev and Alistair
+Francis.
+
+The ->parse() method would sometimes return false even though everything
+worked fine.  Thanks, @sebaer.
+
+
+
 1.54    Fri Sep 17 00:44:36 CDT 2010
 ====================================
 Please note that the bug tracker for HTML::Tidy is now at
